--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -20,7 +20,7 @@
   overflow-y: auto;
   font-family: "Poppins", sans-serif;
   border-radius: 5px;
-  padding-top: 100px;
+  padding-top: 5px;
 }
 
 .center-style {
@@ -32,6 +32,8 @@
 .analytics-reports-style {
   height: 100vh;
 }
+
+
 
 .profile-pic-img {
   object-fit: contain;
@@ -54,7 +56,35 @@ label {
 p {
   line-height: 1.4rem;
 }
+.d-grp {
+  position: relative;
+  margin-bottom: 18px;
+}
+.d-grp .d-inp {
+  width: 100%;
+  border-radius: 4px;
+  height: 45px;
+  padding: 10px 12px;
+  border: 1px solid #D1D1D1;
+  outline: none;
+  font-size: 14px;
+  color: #000000;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+}
 
+.d-grp .d-inp.d-inp1 {
+  height: auto !important;
+}
+
+.d-grp .d-label {
+  color: #727272;
+  width: 100%;
+  font-family: Poppins-Semibold;
+  font-size: 13px;
+  margin-bottom: 4px;
+  line-height: 1;
+}
 .sub-title {
   padding: 20px;
   font-size: 16px;
@@ -94,6 +124,7 @@ p {
   -moz-box-shadow: 1px 1px 10px 0px #0228449b;
   box-shadow: 1px 1px 10px 0px #0228449b;
 }
+
 
 .sm-btn {
   font-size: 10px;
@@ -226,7 +257,7 @@ p {
 .log-in-main-container {
   display: flex;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   flex-direction: column;
   align-items: center;
 }
@@ -645,8 +676,7 @@ p {
   width: 50px;
   border: 2px solid #246de8;
   border-radius: 12px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 .menu:hover .icon-box-body .icon-box {
@@ -689,7 +719,7 @@ p {
   align-items: center;
   justify-content: center;
   background: #39bdf60b;
-  margin-top: 10px;
+  margin-top: 5px;
   margin-bottom: 10px;
   border-radius: 5px;
   padding: 10px;
@@ -706,6 +736,39 @@ p {
   margin-bottom: 5px;
   border-radius: 5px;
 }
+.jobs-list-item .item .job-label {
+  flex: 1;
+  font-size: 1rem;
+  font-weight: 500;
+  padding-left: 20px;
+}
+.jobs-cdx{
+  border: 0.5px solid rgba(2, 112, 131, 0.406);
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  padding: 25px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+.card-Induction {
+  width: 100;
+  background-color: #f0f0f0;
+  min-height: 450px;
+}
+
+.cards-job {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 25px;
+  border: 3.5px solid rgba(241, 246, 247, 0.406);
+  margin-top: 25px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  margin-left: 15px;
+}
 
 .icon {
   display: flex;
@@ -716,6 +779,35 @@ p {
   color: white;
   background: linear-gradient(to bottom, #698fff 0%, #03b5b5 100%);
   border-radius: 50%;
+}
+
+.Jobs-Add-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-top: 190px; */
+  width: 100%;
+}
+
+.CD-define-jobs-list {
+  display: flex;
+  flex-direction: column;
+  height: 480px;
+  overflow: scroll;
+  justify-content: flex-start;
+}
+
+.bgWhite {
+  background-color: white;
+  overflow-y: auto;
+  min-height: 410px;
+  width: 100%;
+  border-radius: 8px;
+  margin-top: 8px;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .card-content {
@@ -775,12 +867,10 @@ p {
 
 .choice-btns .pending {
   float: left;
-  font-weight: bold;
-  border: none;
-  color: #dc7d1e;
+  border: 2px solid rgb(224, 235, 9);
+  color: rgb(0, 0, 0);
+  background: #FFFF00;
   margin-right: 5px;
-  box-shadow: none;
-  cursor: default;
 }
 
 .choice-btns .rejected {
@@ -792,7 +882,7 @@ p {
   cursor: default;
 }
 
-.step-card {
+.campus-jobs{
   background: none;
   border: none;
   text-transform: uppercase;
@@ -806,11 +896,12 @@ p {
   margin-left: 15px;
 }
 
-.step-card:hover {
+.campus-jobs:hover {
   outline: 4px solid #03355b;
   border-radius: 50px;
   background: #c3d7e368;
 }
+
 
 .tab-select {
   background: #1ba4f968;
@@ -1025,7 +1116,7 @@ p {
 .job-card-main {
   display: flex;
   background: white;
-  padding: 25px;
+  padding: 15px;
   width: 100%;
   margin-bottom: 10px;
   border-radius: 10px;
@@ -1177,11 +1268,6 @@ p {
   outline: 3px solid #0c3343;
 }
 
-.tab-select {
-  background: #1ba4f968;
-  border-radius: 50px;
-  outline: 4px solid #03355b;
-}
 
 .job-display {
   position: relative;
@@ -1322,6 +1408,7 @@ p {
   top: 6px;
   cursor: pointer;
   border-radius: 10px;
+
 }
 
 .ticket-chat-main .chat-display {
@@ -1418,6 +1505,7 @@ p {
   border-radius: 5px;
   padding: 0 10px 0;
   color: #2f4452;
+
 }
 
 .chat-sent-type input {
@@ -1459,6 +1547,7 @@ p {
   background: #02304c;
   color: white;
 }
+
 
 .broadcast-history-container .broadcast-message-card {
   padding: 20px;
@@ -1542,7 +1631,4 @@ p {
   bottom: 110px;
   left: 30px;
   width: 20%;
-}
-.feature-widget-report-twenty {
-  height: 400px;
 }
