--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1632,3 +1632,83 @@ p {
   left: 30px;
   width: 20%;
 }
+
+/* Powerbistyles */
+
+.feature-widget-report-Three {
+  height: 463px;
+}
+.feature-widget-report-Four {
+  height: 400px;
+}
+.feature-widget-report-Five {
+  height: 400px;
+}
+.feature-widget-report-Six {
+  height: 420px;
+}
+.feature-widget-report-Seven {
+  height: 330px;
+}
+.feature-widget-report-Eight {
+  height: 280px;
+}
+.feature-widget-report-Nine {
+  height: 300px;
+}
+.feature-widget-report-Ten {
+  height: 300px;
+}
+.feature-widget-report-Eleven {
+  height: 300px;
+}
+.feature-widget-report-Twelve {
+  height: 360px;
+}
+.feature-widget-report-Thirteen {
+  height: 310px;
+}
+.feature-widget-report-Fourteen {
+  height: 360px;
+}
+.feature-widget-report-Fifteen {
+  height: 450px;
+}
+.feature-widget-report-Sixteen {
+  height: 450px;
+}
+.feature-widget-report-Sixteen {
+  height: 450px;
+}
+.feature-widget-report-Seventeen {
+  height: 450px;
+}
+.feature-widget-report-Eighteen {
+  height: 450px;
+}
+.feature-widget-report-Nineteen {
+  height: 450px;
+}
+
+.feature-widget .feature-widget-map-report-body {
+  height: 1000px;
+  width: 100%;
+}
+
+.feature-widget .feature-widget-map-report-body {
+  height: 1100px;
+  width: 100%;
+}
+
+.feature-widget .feature-widget-map-report-body {
+  height: 250px;
+  width: 320px;
+}
+.feature-widget .feature-widget-map-report-body {
+  height: 1000px;
+  width: 100%;
+}
+.feature-widget .feature-widget-map-report-body {
+  height: 1000px;
+  width: 100%;
+}
