--- a/public/CSS/dashboard.css
+++ b/public/CSS/dashboard.css
@@ -213,7 +213,7 @@
 
 .ReactTags__tagInput input.ReactTags__tagInputField {
     /* Styles for the input field */
-    width: 310px;
+    width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
