--- a/public/CSS/registration.css
+++ b/public/CSS/registration.css
@@ -14,7 +14,7 @@
   
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 10px 10px 10px 120px;
     width: 100%;
   }
   .title-text-register-as {
