--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -346,11 +346,21 @@ p {
   min-height: 500px;
 }
 
+@media screen and (max-width: 768px) {
+  .log-in-container .register-card-main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 0px 0px 150px ;
+  }
+}
+
+
 .log-in-container .register-card-main {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 50px 0;
+  /* padding: 0 50px 0; */
 }
 
 .log-in-container .register-card-main .registration-card {
@@ -1312,7 +1322,7 @@ p {
 
 .container_New {
   display: flex;
-  width: 70%;
+  width: 75%;
   align-self: center;
   justify-content: space-between;
   margin: 0px auto;
