--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -11,7 +11,7 @@
 
 .container-body {
   /* padding: 10px;   ehtasham commented */
-  display: inline flex;
+  /* display: inline flex; */
   justify-content: center;
   background: white;
   width: 100%;
