--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -102,6 +102,7 @@ p {
   border-radius: 5px;
 }
 
+
 .btnBlock {
   background: #6198f7;
   border: 2px solid #6198f7;
@@ -388,6 +389,9 @@ p {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+}
+.MuiOutlinedInput-root {
+  margin-bottom: 15px;
 }
 
 .cmp-register-main {
@@ -1770,4 +1774,10 @@ p {
 .feature-widget .feature-widget-map-report-body {
   height: 1000px;
   width: 100%;
+}
+
+.MuiList-root.MuiMenu-list.MuiList-padding {
+  width: calc(100% + 200px);
+  overflow-x: auto;
+
 }
