--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -149,9 +149,9 @@
 
 .list-card-main .list-card-name{
     padding-left: 20px;
-    font-size: 20px;
+    font-size: 15px;
     margin-left: 10px;
-    font-size: 20px;
+    /* font-size: 20px; */
     font-weight: bold;
     display: flex;
     align-items: center;
