--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -358,6 +358,14 @@ p {
     justify-content: center;
     padding: 0px 0px 0px 150px;
   }
+  .log-in-main-container {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 50px;
+    zoom: 0.6;
+  }
 
   .search-bar .search-results {
     position: absolute;
@@ -407,6 +415,11 @@ p {
     margin-left: 10px;
   }
 
+  .forgot-input{
+    width: 100%;
+    margin-bottom: 15px;
+  }
+
 }
 
 @media screen and (min-width: 424px) {
@@ -433,6 +446,18 @@ p {
     max-height: 300px;
     overflow: hidden;
     overflow-y: auto;
+  }
+
+  .forgot-input{
+    width: 60%;
+    margin-bottom: 15px;
+  }
+
+  .log-in-main-container {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
   }
 
   .btn2 {
